# portfolio-service/internal/dto/bond_response.go
@@ -1,5 +1,7 @@
 package dto
 
+import "time"
+
 type ResponseBond struct {
 	ISIN     string      `json:"isin"`
 	FIGI     string      `json:"figi"`
@@ -7,4 +9,14 @@ type ResponseBond struct {
 	Nominal  float64     `json:"nominal"`
 	Currency string      `json:"currency"`
 	Coupons  interface{} `json:"coupons"`
+}
+
+type CouponAnalytics struct {
+	Month  string  `json:"month"`
+	Amount float64 `json:"amount"`
+}
+
+type BondPayment struct {
+	Date   time.Time `json:"date"`
+	Amount float64   `json:"amount"`
 }
